external-crates/move/crates/move-compiler/tests/move_2024/parser/for_keyword.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/for_keyword.move:2:9
  │
2 │     fun for(_: u64): bool { false }
  │         ^^^
  │         │
  │         Unexpected 'for'
  │         Expected an identifier
